home page inter-linked with sub-pages

--- a/home-cta.html
+++ b/home-cta.html
@@ -4,7 +4,7 @@
     <!-- CTA Left -->
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center cta" style="background-color:#44494e; padding-top: 10px;">
       <h1 style="color:rgb(255,255,255); font-size: 22px; font-weight: bold; margin-bottom: 0px;">
-        <a href="#" style="text-decoration: none; color: #fff;">
+        <a href="https://fshippingprod.wpengine.com/small-business/" style="text-decoration: none; color: #fff;" target="_blank">
           &nbsp;Businesses.
           <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
         </a>
@@ -14,7 +14,7 @@
     <!-- CTA Right -->
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center cta" style="background-color:#343a40; padding-top: 10px;">
       <h1 style="color:rgb(255,255,255); font-size: 22px; font-weight: bold; margin-bottom: 0px;">
-        <a href="#" style="text-decoration: none; color: #fff;">
+        <a href="https://fshippingprod.wpengine.com/residential/" style="text-decoration: none; color: #fff;" target="_blank">
           &nbsp;Individuals.
           <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
         </a>
