added padding, adjusted width of row and centered with margin.

--- a/residential-firstime-fvp.html
+++ b/residential-firstime-fvp.html
@@ -1,7 +1,7 @@
 <!-- First Time Shipper & Freight VS Parcel Sections Start -->
-<div class="features-blue bottom" id="fcp-features-bottom" style="background-color:#EFF0F0; background-image:url(&quot;none&quot;);">
+<div class="features-blue bottom" id="fcp-features-bottom" style="background-color:#EFF0F0; background-image:url(&quot;none&quot;); padding-bottom: 40px;">
   <div class="container-fluid" style="background-color:#EFF0F0;">
-    <div class="row">
+    <div class="row" style="width: 90vw; margin: auto;">
       <!-- First Time Shipper -->
       <div class="col-lg-6 col-md-12 col-md-12">
         <div class="intro intro2" style="padding-top:40px; text-align:center;">
